--- a/app/src/main/res/layout/home_main.xml
+++ b/app/src/main/res/layout/home_main.xml
@@ -11,11 +11,12 @@
         android:id="@+id/textHello"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="84dp"
         android:text="Welcome to Home!"
         android:textColor="@android:color/black"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/buttonOpenBillings"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -23,23 +24,63 @@
         android:id="@+id/buttonOpenBillings"
         android:layout_width="361dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="85dp"
         android:baselineAligned="false"
         android:text="Contas em Aberto"
-        app:layout_constraintBottom_toTopOf="@+id/buttonPaidBillings"
+        android:background="@drawable/rounded_blue_button"
+        android:layout_marginTop="20dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/buttonUserData" />
 
     <Button
         android:id="@+id/buttonPaidBillings"
         android:layout_width="361dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="368dp"
         android:baselineAligned="false"
         android:text="Contas Pagas"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:background="@drawable/rounded_blue_button"
+        android:layout_marginTop="20dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/buttonOpenBillings" />
+
+
+
+    <Button
+        android:id="@+id/buttonUsedServices"
+        android:layout_width="361dp"
+        android:layout_height="wrap_content"
+        android:text="Serviços Utilizados"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="20dp"
+        android:background="@drawable/rounded_blue_button"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/buttonSolicitations"
+        tools:ignore="MissingConstraints" />
+
+    <Button
+        android:id="@+id/buttonSolicitations"
+        android:layout_width="361dp"
+        android:layout_height="wrap_content"
+        android:text="Solicitações"
+        android:layout_marginTop="20dp"
+        android:background="@drawable/rounded_blue_button"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/buttonPaidBillings"
+        tools:ignore="MissingConstraints" />
+
+    <Button
+        android:id="@+id/buttonUserData"
+        android:layout_width="361dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="48dp"
+        android:background="@drawable/rounded_blue_button"
+        android:text="Dados do Usuário"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textHello"
+        tools:ignore="MissingConstraints" />
 
     <include layout="@layout/base"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
