--- a/app/src/main/res/layout/list_view_main.xml
+++ b/app/src/main/res/layout/list_view_main.xml
@@ -10,17 +10,20 @@
         android:id="@+id/backBtnOpenBillings"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="12dp"
         android:text="Voltar"
-        tools:layout_editor_absoluteX="18dp"
-        tools:layout_editor_absoluteY="16dp"
-        tools:ignore="MissingConstraints" />
+        app:layout_constraintBottom_toTopOf="@+id/openBillingsList"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="16dp" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/openBillingsList"
         android:layout_width="409dp"
-        android:layout_height="665dp"
+        android:layout_height="595dp"
+        android:layout_marginBottom="68dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         tools:ignore="MissingConstraints" />
 
@@ -28,10 +31,14 @@
         android:id="@+id/errorOpenBilling"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="40sp"
+        android:layout_marginTop="228dp"
+        android:textSize="20sp"
+        android:textColor="@color/red"
+        android:text=""
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="327dp" />
+        app:layout_constraintTop_toTopOf="@+id/openBillingsList" />
 
     <include layout="@layout/base"/>
 
