--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -50,9 +50,13 @@
         android:layout_height="50dp"
         android:layout_marginBottom="272dp"
         android:text="Login"
+        android:background="@drawable/rounded_blue_button"
+        android:theme="@style/Button_Blue"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <include layout="@layout/base"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
