--- a/app/src/main/res/layout/paid_billing_item.xml
+++ b/app/src/main/res/layout/paid_billing_item.xml
@@ -21,7 +21,7 @@
         android:id="@+id/paidBillingFinishDate"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="10-08-2023"
+        android:text="-"
         android:textSize="20sp"
         app:layout_constraintStart_toEndOf="@+id/paidBillingFinishDateLabel"
         app:layout_constraintTop_toTopOf="parent" />
@@ -42,7 +42,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="12dp"
-        android:text="75,00"
+        android:text="-"
         android:textSize="20sp"
         app:layout_constraintStart_toEndOf="@+id/valuePaidBillingLabel"
         app:layout_constraintTop_toTopOf="parent" />
@@ -63,7 +63,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="12dp"
         android:layout_marginTop="8dp"
-        android:text="08-08-2023"
+        android:text="-"
         android:textSize="15sp"
         app:layout_constraintStart_toEndOf="@+id/paidBillingPaidDateLabel"
         app:layout_constraintTop_toBottomOf="@+id/paidBillingFinishDate"
@@ -86,7 +86,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="4dp"
         android:layout_marginTop="12dp"
-        android:text="75,00"
+        android:text="-"
         android:textSize="15sp"
         app:layout_constraintStart_toEndOf="@+id/paidBillingPaidValueLabel"
         app:layout_constraintTop_toBottomOf="@+id/paidBillingPaidDateLabel"
@@ -110,7 +110,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="12dp"
-        android:text="0,00"
+        android:text="-"
         android:textSize="15sp"
         app:layout_constraintStart_toEndOf="@+id/paidBillingFeeValueLabel"
         app:layout_constraintTop_toBottomOf="@+id/paidBillingPaidDate"
@@ -133,7 +133,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="13dp"
-        android:text="(31)99503-4455"
+        android:text="-"
         android:textSize="15sp"
         app:layout_constraintStart_toEndOf="@+id/paidBillingIdTerminalLabel"
         app:layout_constraintTop_toBottomOf="@+id/paidBillingPaidValue"
